fix: prevent font flicker and close sidebar on navigation

--- a/src/app/core/layout/header/header.scss
+++ b/src/app/core/layout/header/header.scss
@@ -71,9 +71,7 @@
 
 
 @media (max-width: 1024px) {
-
-    .desktop__menu,
-    .logo {
+    .desktop__menu {
         display: none;
     }
 
