--- a/src/app/core/layout/sidebar/sidebar.scss
+++ b/src/app/core/layout/sidebar/sidebar.scss
@@ -89,7 +89,7 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .sidebar__content {
     width: 250px;
   }
